--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 [Bb]uild/
 [Bb]uilds/
 [Ll]ogs/
-[Pp]lugins/
+[Aa]ssets/Plugins/Android/
 Assets/AssetStoreTools*
 
 # Visual Studio cache directory
